--- a/templates/plugin_cpp/file.j2
+++ b/templates/plugin_cpp/file.j2
@@ -2,6 +2,8 @@
 // Edits need to be made to the proto files
 // (see https://github.com/mavlink/MAVSDK-Proto/blob/master/protos/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.proto)
 
+#include <iomanip>
+
 #include "{{ plugin_name.lower_snake_case }}_impl.h"
 #include "plugins/{{ plugin_name.lower_snake_case }}/{{ plugin_name.lower_snake_case }}.h"
 
