--- a/templates/plugin_cpp/struct.j2
+++ b/templates/plugin_cpp/struct.j2
@@ -8,12 +8,16 @@ bool operator==(const {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_ca
     return
     {%- for field in fields %}
     {%- if field.type_info.name == 'double' %}
-        ((std::isnan(rhs.{{ field.name.lower_snake_case }}) && std::isnan(lhs.{{ field.name.lower_snake_case }})) || (std::abs(rhs.{{ field.name.lower_snake_case }} - lhs.{{ field.name.lower_snake_case }}) < std::numeric_limits<double>::epsilon()))
+        {%- if field.epsilon %}
+        ((std::isnan(rhs.{{ field.name.lower_snake_case }}) && std::isnan(lhs.{{ field.name.lower_snake_case }})) || (std::fabs(rhs.{{ field.name.lower_snake_case }} - lhs.{{ field.name.lower_snake_case }}) < {{ field.epsilon }}))
+        {%- else %}
+        ((std::isnan(rhs.{{ field.name.lower_snake_case }}) && std::isnan(lhs.{{ field.name.lower_snake_case }})) || rhs.{{ field.name.lower_snake_case }} == lhs.{{ field.name.lower_snake_case }})
+        {%- endif %}
     {%- elif field.type_info.name == 'float' %}
-        ((std::isnan(rhs.{{ field.name.lower_snake_case }}) && std::isnan(lhs.{{ field.name.lower_snake_case }})) || (std::abs(rhs.{{ field.name.lower_snake_case }} - lhs.{{ field.name.lower_snake_case }}) < std::numeric_limits<float>::epsilon()))
+        ((std::isnan(rhs.{{ field.name.lower_snake_case }}) && std::isnan(lhs.{{ field.name.lower_snake_case }})) || rhs.{{ field.name.lower_snake_case }} == lhs.{{ field.name.lower_snake_case }})
     {%- else %}
         (rhs.{{ field.name.lower_snake_case }} == lhs.{{ field.name.lower_snake_case }})
-    {% endif %}
+    {%- endif %}
     {%- if loop.last %};{% else %} &&{% endif %}
     {%- endfor %}
 }
