Handle the enum prefix logic in the protoc plugin instead of the templates

--- a/templates/mavsdk_server/enum.j2
+++ b/templates/mavsdk_server/enum.j2
@@ -6,11 +6,11 @@ static rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_
         default:
             LogErr() << "Unknown {{ name.lower_snake_case }} enum value: " << static_cast<int>({{ name.lower_snake_case }});
         // FALLTHROUGH
-        case mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }}:
-            return rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ value.name.uppercase }};
+        case mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }}:
+            return rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ name.uppercase }}_{{ value.name.uppercase }};
         {%- else %}
-        case mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }}:
-            return rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ value.name.uppercase }};
+        case mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }}:
+            return rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ name.uppercase }}_{{ value.name.uppercase }};
         {%- endif %}
         {%- endfor %}
     }
@@ -24,11 +24,11 @@ static mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }} t
         default:
             LogErr() << "Unknown {{ name.lower_snake_case }} enum value: " << static_cast<int>({{ name.lower_snake_case }});
         // FALLTHROUGH
-        case rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ value.name.uppercase }}:
-            return mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }};
+        case rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ name.uppercase }}_{{ value.name.uppercase }}:
+            return mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }};
         {%- else %}
-        case rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ value.name.uppercase }}:
-            return mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }};
+        case rpc::{{ plugin_name.lower_snake_case }}::{% if parent_struct %}{{ parent_struct.upper_camel_case }}_{{ name.upper_camel_case }}_{% endif %}{{ name.uppercase }}_{{ value.name.uppercase }}:
+            return mavsdk::{{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }};
         {%- endif %}
         {%- endfor %}
     }
