--- a/templates/plugin_cpp/enum.j2
+++ b/templates/plugin_cpp/enum.j2
@@ -3,7 +3,7 @@ const char* {{ plugin_name.upper_camel_case }}::result_str({{ plugin_name.upper_
 {
     switch (result) {
         {%- for value in values %}
-        case {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }}:
+        case {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }}:
             return "{{ value.description[1:].rstrip() }}";
         {%- endfor %}
         default:
@@ -16,8 +16,8 @@ std::ostream& operator<<(std::ostream& str, {{ plugin_name.upper_camel_case }}::
 {
     switch ({{ name.lower_snake_case }}) {
         {%- for value in values %}
-        case {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{% set value_without_prefix = value.name.lower_camel_case[name.lower_camel_case|length:] %}{{ value_without_prefix }}:
-            return str << "{{ value.name.upper_readable }}";
+        case {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }}::{{ value.name.upper_camel_case }}:
+            return str << "{{ name.upper_readable }} {{ value.name.upper_readable }}";
         {%- endfor %}
         default:
             return str << "Unknown";
