--- a/templates/plugin_cpp/stream.j2
+++ b/templates/plugin_cpp/stream.j2
@@ -6,7 +6,11 @@ void {{ plugin_name.upper_camel_case }}::{{ name.lower_snake_case }}_async({{ na
 {% endif %}
 
 {% if is_sync %}
-{% if not return_type.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }} {{ plugin_name.upper_camel_case }}::{{ name.lower_snake_case }}() const
+{% if return_type.is_repeated %}
+std::vector<{% if not return_type.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.inner_name }}>
+{% else %}
+{% if not return_type.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }}
+{%endif -%} {{ plugin_name.upper_camel_case }}::{{ name.lower_snake_case }}() const
 {
     return _impl->{{ name.lower_snake_case }}();
 }
