--- a/templates/plugin_h/enum.j2
+++ b/templates/plugin_h/enum.j2
@@ -12,4 +12,4 @@ enum class {{ name.upper_camel_case }} {
  *
  * @return A reference to the stream.
  */
-friend std::ostream& operator<<(std::ostream& str, {{ plugin_name.upper_camel_case }}::{{ name.upper_camel_case }} const& {{ name.lower_snake_case }});
+friend std::ostream& operator<<(std::ostream& str, {{ plugin_name.upper_camel_case }}::{% if parent_struct and not name.upper_camel_case.endswith("Result") %}{{ parent_struct.upper_camel_case }}::{% endif %}{{ name.upper_camel_case }} const& {{ name.lower_snake_case }});
