--- a/templates/plugin_h/struct.j2
+++ b/templates/plugin_h/struct.j2
@@ -7,7 +7,9 @@
 {%- endmacro %}
 
 {% for nested_enum in nested_enums %}
+{% if nested_enum.endswith('Result') -%}
 {{ nested_enums[nested_enum] }}
+{% endif -%}
 {% endfor -%}
 
 {% if not name.upper_camel_case.endswith('Result') -%}
@@ -15,6 +17,9 @@
  * @brief {{ struct_description | replace('\n', '\n *')}}
  */
 struct {{ name.upper_camel_case }} {
+    {% for nested_enum in nested_enums %}
+    {{ nested_enums[nested_enum] }}
+    {% endfor -%}
     {%- for field in fields %}
     {{ field.type_info.name }} {{ field.name.lower_snake_case }}{% if field.default_value %}{{ '{' }}{{ convert_default_value_str(field.type_info.name, field.default_value) }}{{ '}' }}{% else %}{{ '{}' }}{% endif %}; /**< @brief{{ field.description.rstrip() }} */
     {%- endfor %}
