--- a/templates/mavsdk_server/call.j2
+++ b/templates/mavsdk_server/call.j2
@@ -19,11 +19,13 @@ grpc::Status {{ name.upper_camel_case }}(
         {% endif %}
     {% endfor -%}
 
-    auto result = _{{ plugin_name.lower_snake_case }}.{{ name.lower_snake_case }}({% for param in params %}{% if param.type_info.is_repeated %}{{ param.name.lower_snake_case }}_vec{% else %}{% if param.type_info.is_primitive %}request->{{ param.name.lower_snake_case }}(){% else %}translateFromRpc{{ param.name.upper_camel_case }}(request->{{ param.name.lower_snake_case }}()){% endif %}{% endif %}{{ ", " if not loop.last }}{% endfor %});
+    {% if has_result %}auto result = {% endif %}_{{ plugin_name.lower_snake_case }}.{{ name.lower_snake_case }}({% for param in params %}{% if param.type_info.is_repeated %}{{ param.name.lower_snake_case }}_vec{% else %}{% if param.type_info.is_primitive %}request->{{ param.name.lower_snake_case }}(){% else %}translateFromRpc{{ param.name.upper_camel_case }}(request->{{ param.name.lower_snake_case }}()){% endif %}{% endif %}{{ ", " if not loop.last }}{% endfor %});
 
+    {% if has_result %}
     if (response != nullptr) {
         fillResponseWithResult(response, result);
     }
+    {% endif %}
 
     return grpc::Status::OK;
 }
