--- a/templates/mavsdk_server/stream.j2
+++ b/templates/mavsdk_server/stream.j2
@@ -8,7 +8,7 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
 
     std::mutex subscribe_mutex{};
 
-    _{{ plugin_name.lower_snake_case }}.{{ name.lower_snake_case }}_async(
+    _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}(
         [this, &writer, &stream_closed_promise, is_finished, &subscribe_mutex](
             {%- if has_result -%}mavsdk::{{ plugin_name.upper_camel_case }}::Result result,{%- endif -%}
             const {% if return_type.is_repeated %}std::vector<{% if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.inner_name }}>{% else %}{%- if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }}{% endif %} {{ name.lower_snake_case }}) {
@@ -37,7 +37,7 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
 
         std::lock_guard<std::mutex> lock(subscribe_mutex);
         if (!*is_finished && !writer->Write(rpc_response)) {
-            _{{ plugin_name.lower_snake_case }}.{{ name.lower_snake_case }}_async(nullptr);
+            _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}(nullptr);
             *is_finished = true;
             unregister_stream_stop_promise(stream_closed_promise);
             stream_closed_promise->set_value();
