Rename all *_callback_t to *Callback
The motivation is to leave the old-style typedef _t behind and move to
`using`.

--- a/templates/plugin_h/call.j2
+++ b/templates/plugin_h/call.j2
@@ -4,7 +4,7 @@
  *
  * This function is non-blocking.{% if is_sync %} See '{{ name.lower_snake_case }}' for the blocking counterpart.{% endif %}
  */
-void {{ name.lower_snake_case }}_async({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const result_callback_t callback);
+void {{ name.lower_snake_case }}_async({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const ResultCallback callback);
 {% endif %}
 
 {% if is_sync %}
