--- a/templates/plugin_h/stream.j2
+++ b/templates/plugin_h/stream.j2
@@ -8,7 +8,7 @@
 * @brief Callback type for subscribe_{{ name.lower_snake_case }}.
 */
     {% endif %}
-typedef std::function<void({% if has_result %}{{ plugin_name.upper_camel_case }}::Result, {% endif %}{{ return_type.name }})> {{ name.upper_camel_case }}Callback;
+using {{ name.upper_camel_case }}Callback = std::function<void({% if has_result %}{{ plugin_name.upper_camel_case }}::Result, {% endif %}{{ return_type.name }})>;
 
 /**
  * @brief {{ method_description | replace('\n', '\n *')}}
