--- a/templates/plugin_h/file.j2
+++ b/templates/plugin_h/file.j2
@@ -54,7 +54,7 @@ public:
     /**
      * @brief Callback type for asynchronous {{ plugin_name.upper_camel_case }} calls.
      */
-    typedef std::function<void(Result)> ResultCallback;
+    using ResultCallback = std::function<void(Result)>;
 {% endif %}
 
 {% for method in methods %}
