--- a/templates/mavsdk_server/stream.j2
+++ b/templates/mavsdk_server/stream.j2
@@ -31,7 +31,9 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
         auto rpc_result = translateToRpcResult(result);
         auto* rpc_{{ plugin_name.lower_snake_case }}_result = new rpc::{{ plugin_name.lower_snake_case }}::{{ plugin_name.upper_camel_case }}Result();
         rpc_{{ plugin_name.lower_snake_case }}_result->set_result(rpc_result);
-        rpc_{{ plugin_name.lower_snake_case }}_result->set_result_str(mavsdk::{{ plugin_name.upper_camel_case }}::result_str(result));
+        std::stringstream ss;
+        ss << result;
+        rpc_{{ plugin_name.lower_snake_case }}_result->set_result_str(ss.str());
         rpc_response.set_allocated_{{ plugin_name.lower_snake_case }}_result(rpc_{{ plugin_name.lower_snake_case }}_result);
     {% endif %}
 
