--- a/templates/mavsdk_server/stream.j2
+++ b/templates/mavsdk_server/stream.j2
@@ -37,11 +37,12 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
         rpc_response.set_allocated_{{ plugin_name.lower_snake_case }}_result(rpc_{{ plugin_name.lower_snake_case }}_result);
     {% endif %}
 
-        std::lock_guard<std::mutex> lock(subscribe_mutex);
+        std::unique_lock<std::mutex> lock(subscribe_mutex);
         if (!*is_finished && !writer->Write(rpc_response)) {
             _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}(nullptr);
             *is_finished = true;
             unregister_stream_stop_promise(stream_closed_promise);
+            lock.unlock();
             stream_closed_promise->set_value();
         }
     });
