--- a/templates/mavsdk_server/stream.j2
+++ b/templates/mavsdk_server/stream.j2
@@ -1,4 +1,4 @@
-grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* context */, const mavsdk::rpc::{{ plugin_name.lower_snake_case }}::Subscribe{{ name.upper_camel_case }}Request* /* request */, grpc::ServerWriter<rpc::{{ plugin_name.lower_snake_case }}::{{ name.upper_camel_case }}Response>* writer) override
+grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* context */, const mavsdk::rpc::{{ plugin_name.lower_snake_case }}::Subscribe{{ name.upper_camel_case }}Request* {% if params %}request{% else %}/* request */{% endif %}, grpc::ServerWriter<rpc::{{ plugin_name.lower_snake_case }}::{{ name.upper_camel_case }}Response>* writer) override
 {
     auto stream_closed_promise = std::make_shared<std::promise<void>>();
     auto stream_closed_future = stream_closed_promise->get_future();
@@ -8,7 +8,7 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
 
     std::mutex subscribe_mutex{};
 
-    _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}(
+    _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}request->{{ param.name.lower_snake_case }}(), {% endfor %}
         [this, &writer, &stream_closed_promise, is_finished, &subscribe_mutex](
             {%- if has_result -%}mavsdk::{{ plugin_name.upper_camel_case }}::Result result,{%- endif -%}
             const {% if return_type.is_repeated %}std::vector<{% if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.inner_name }}>{% else %}{%- if not return_type.is_primitive %}{{ package.lower_snake_case.split('.')[0] }}::{{ plugin_name.upper_camel_case }}::{% endif %}{{ return_type.name }}{% endif %} {{ name.lower_snake_case }}) {
@@ -39,7 +39,9 @@ grpc::Status Subscribe{{ name.upper_camel_case }}(grpc::ServerContext* /* contex
 
         std::unique_lock<std::mutex> lock(subscribe_mutex);
         if (!*is_finished && !writer->Write(rpc_response)) {
-            _{{ plugin_name.lower_snake_case }}.{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}(nullptr);
+            {% if not is_finite %}
+            _{{ plugin_name.lower_snake_case }}.subscribe_{{ name.lower_snake_case }}(nullptr);
+            {% endif %}
             *is_finished = true;
             unregister_stream_stop_promise(stream_closed_promise);
             lock.unlock();
