--- a/templates/plugin_impl_cpp/call.j2
+++ b/templates/plugin_impl_cpp/call.j2
@@ -1,5 +1,5 @@
 {% if is_async %}
-void {{ plugin_name.upper_camel_case }}Impl::{{ name.lower_snake_case }}_async({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const {{ plugin_name.upper_camel_case }}::ResultCallback callback)
+void {{ plugin_name.upper_camel_case }}Impl::{{ name.lower_snake_case }}_async({% for param in params %}{% if not param.type_info.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}const {{ plugin_name.upper_camel_case }}::ResultCallback callback)
 {
     {% for param in params %}
     UNUSED({{ param.name.lower_snake_case }});
@@ -9,7 +9,7 @@ void {{ plugin_name.upper_camel_case }}Impl::{{ name.lower_snake_case }}_async({
 {% endif %}
 
 {% if is_sync %}
-{% if has_result %}{{ plugin_name.upper_camel_case }}::Result{% else %}void{% endif %} {{ plugin_name.upper_camel_case }}Impl::{{ name.lower_snake_case }}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{{ ", " if not loop.last }}{% endfor %})
+{% if has_result %}{{ plugin_name.upper_camel_case }}::Result{% else %}void{% endif %} {{ plugin_name.upper_camel_case }}Impl::{{ name.lower_snake_case }}({% for param in params %}{% if not param.type_info.is_primitive %}{{ plugin_name.upper_camel_case }}::{% endif %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}{{ ", " if not loop.last }}{% endfor %})
 {
     {% for param in params %}
     UNUSED({{ param.name.lower_snake_case }});
