--- a/templates/plugin_impl_cpp/file.j2
+++ b/templates/plugin_impl_cpp/file.j2
@@ -7,6 +7,11 @@ namespace mavsdk {
     _parent->register_plugin(this);
 }
 
+{{ plugin_name.upper_camel_case }}Impl::{{ plugin_name.upper_camel_case }}Impl(std::shared_ptr<System> system) : PluginImplBase(system)
+{
+    _parent->register_plugin(this);
+}
+
 {{ plugin_name.upper_camel_case }}Impl::~{{ plugin_name.upper_camel_case }}Impl()
 {
     _parent->unregister_plugin(this);
