--- a/templates/plugin_impl_h/file.j2
+++ b/templates/plugin_impl_h/file.j2
@@ -7,7 +7,8 @@ namespace mavsdk {
 
 class {{ plugin_name.upper_camel_case }}Impl : public PluginImplBase {
 public:
-    {{ plugin_name.upper_camel_case }}Impl(System& system);
+    explicit {{ plugin_name.upper_camel_case }}Impl(System& system);
+    explicit {{ plugin_name.upper_camel_case }}Impl(std::shared_ptr<System> system);
     ~{{ plugin_name.upper_camel_case }}Impl();
 
     void init() override;
