core: Add plugin access to system, unify libs
This adds the possibility to get plugins from a system like this:

mavsdk.systems()[0].action().takeoff()

This makes the Python interface based on pybind11 much easier because it
solves the ownership problems that we had because of having Mavsdk and
plugins separately instantiated.

This however means that we will have to unify the libraries, so create
one libmavsdk.so combining the core and the plugins.

--- a/templates/plugin_h/file.j2
+++ b/templates/plugin_h/file.j2
@@ -18,6 +18,7 @@
 namespace mavsdk {
 
 class System;
+class SystemImpl;
 class {{ plugin_name.upper_camel_case }}Impl;
 
 /**
@@ -51,6 +52,8 @@ public:
      */
     explicit {{ plugin_name.upper_camel_case }}(std::shared_ptr<System> system); // new
 
+    explicit {{ plugin_name.upper_camel_case }}(SystemImpl* system_impl); // new
+
     /**
      * @brief Destructor (internal use only).
      */
@@ -76,9 +79,9 @@ public:
 {% endfor %}
 
     /**
-     * @brief Copy constructor.
+     * @brief Copy constructor (object is not copyable).
      */
-    {{ plugin_name.upper_camel_case }}(const {{ plugin_name.upper_camel_case }}& other);
+    {{ plugin_name.upper_camel_case }}(const {{ plugin_name.upper_camel_case }}& other) = delete;
 
     /**
      * @brief Equality operator (object is not copyable).
