--- a/templates/plugin_cpp/file.j2
+++ b/templates/plugin_cpp/file.j2
@@ -19,6 +19,8 @@ using {{ struct.name.upper_camel_case }} = {{ plugin_name.upper_camel_case }}::{
 
 {{ plugin_name.upper_camel_case }}::{{ plugin_name.upper_camel_case }}(std::shared_ptr<System> system) : PluginBase(), _impl{new {{ plugin_name.upper_camel_case }}Impl(system)} {}
 
+{{ plugin_name.upper_camel_case }}::{{ plugin_name.upper_camel_case }}(SystemImpl* system_impl) : PluginBase(), _impl{new {{ plugin_name.upper_camel_case }}Impl(system_impl)} {}
+
 {{ plugin_name.upper_camel_case }}::~{{ plugin_name.upper_camel_case }}() {}
 
 {% for method in methods %}
