--- a/templates/cmake/file.j2
+++ b/templates/cmake/file.j2
@@ -9,6 +9,8 @@ target_link_libraries(mavsdk_{{ plugin_name.lower_snake_case }}
 
 set_target_properties(mavsdk_{{ plugin_name.lower_snake_case }}
     PROPERTIES COMPILE_FLAGS ${warnings}
+    VERSION ${MAVSDK_VERSION_STRING}
+    SOVERSION ${MAVSDK_SOVERSION_STRING}
 )
 
 target_include_directories(mavsdk_{{ plugin_name.lower_snake_case }} PUBLIC
