--- a/templates/plugin_cpp/stream.j2
+++ b/templates/plugin_cpp/stream.j2
@@ -1,7 +1,7 @@
 {% if is_async %}
 void {{ plugin_name.upper_camel_case }}::{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.type_info.name }} {{ param.name.lower_snake_case }}, {% endfor %}{{ name.upper_camel_case }}Callback callback)
 {
-    _impl->{{ name.lower_snake_case }}_async({% for param in params %}{{ param.name.lower_snake_case }}, {% endfor %}callback);
+    _impl->{% if not is_finite %}subscribe_{% endif %}{{ name.lower_snake_case }}{% if is_finite %}_async{% endif %}({% for param in params %}{{ param.name.lower_snake_case }}, {% endfor %}callback);
 }
 {% endif %}
 
